# src/schemas/storeSchema.js
@@ -8,15 +8,14 @@ const cartSchema = Joi.object({
   userId: Joi.string()
     .required()
     .example('643a6b29f3d5b8d2d8e4d531'), 
-  books: Joi.object()
-    .pattern(
-      Joi.string(), 
-      Joi.number().integer().min(1)  
-    )
+  books: Joi.object({
+    id: Joi.string().required().example('643a6b29f3d5b8d2d8e4d531'),
+    quantity: Joi.number().integer().min(1).required().example(1),
+  })
     .required()
     .example({
-      '643a6b29f3d5b8d2d8e4d532': 2,
-      '643a6b29f3d5b8d2d8e4d533': 1,
+      'id': "643a6b29f3d5b8d2d8e4d531",
+      'Quantity': 1,
     }),
   totalPrice: Joi.number()
     .min(0)
